cluster/homelab/apps/reactive-resume/chrome-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headless-chrome
  namespace: react-resume
spec:
  selector:
    matchLabels:
      app: headless-chrome
  template:
    metadata:
      labels:
        app: headless-chrome
    spec:
      containers:
        - name: headless-chrome
          image: ghcr.io/browserless/chromium:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 3000
