cluster/homelab/apps/reactive-resume/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resume
  namespace: react-resume
spec:
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      labels:
        app: resume
    spec:
      containers:
        - name: resume
          image: amruthpillai/reactive-resume:latest
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 3000
