cluster/homelab/apps/reactive-resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-resume
  namespace: react-resume
spec:
  selector:
    app: resume
  ports:
    - port: 3000
      targetPort: 3000
