cluster/homelab/apps/reactive-resume/local-only-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: react-resume
  namespace: react-resume
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/href: "https://resume.opryga.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Resume Builder"
    gethomepage.dev/description: "Reacttive Resume Builder"
    gethomepage.dev/group: "Personal"
    gethomepage.dev/icon: "nodejs.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`resume.opryga.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        - name: local-ip-list
          namespace: traefik
        # - name: oauth-forward-auth
        #   namespace: traefik
        # - name: oauth-headers
        #   namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: react-resume
          port: 3000
  tls:
    secretName: opryga-com-tls # give it the ole tls cert

---
# Authenticated requests to /oauth2/ will be forwarded to the oauth-proxy service
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth-proxy-path
  namespace: react-resume
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure # or websecure for HTTPS
  routes:
    - match: Host(`resume.opryga.com`) && PathPrefix(`/oauth2/`) # Replace with your domain
      kind: Rule
      services:
        - name: oauth-proxy
          port: 4180
      # middlewares:
      #   - name: crowdsec-bouncer
      #     namespace: traefik
  # Uncomment and configure for HTTPS
  tls:
    secretName: opryga-com-tls
---
# add externalName service for oauth-proxy
apiVersion: v1
kind: Service
metadata:
  name: oauth-proxy
  namespace: react-resume
spec:
  type: ExternalName
  externalName: oauth-proxy.ms-sso.svc.cluster.local
  ports:
    - name: http
      port: 4180
      targetPort: 4180
